# stm32exp

./: Cargo.toml  crates.nix  flake.nix  rust-toolchain.toml
.cargo/: config.toml
crates/stm32f767zi/: Cargo.toml
crates/stm32f767zi/.cargo/: config.toml
crates/stm32f767zi/src/: main.rs
crates/stm32g474re/: Cargo.toml
crates/stm32g474re/.cargo/: config.toml
crates/stm32g474re/src/: lib.rs  main.rs
src/: lib.rs  main.rs
src/drivers/: mpu6050.rs
