[package]
name = "remap"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = {version = "0.1.0", features = ["defmt", "time-driver-any", "stm32g474re", "memory-x", "unstable-pac", "exti"]}
embassy-executor = {version = "0.6.3", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"]}
embassy-time = {version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]}
defmt = "0.3.5"
defmt-rtt = "0.4.0"
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-probe = "0.3.1"
heapless = "0.8.0"

[profile.release]
debug = 2
